// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render correctly 1`] = `
"<div><div class=\\"select  \\"><span class=\\"value placeholder\\"><span><style>
        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          line-height: calc(1.969 * 16pt);
          min-width: 0;
        }
      </style></span></span><div class=\\"icon\\"><svg viewBox=\\"0 0 24 24\\" width=\\"1.25em\\" height=\\"1.25em\\" stroke-width=\\"1\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" fill=\\"none\\" shape-rendering=\\"geometricPrecision\\"><path d=\\"M6 9l6 6 6-6\\"></path><style>
        svg {
          color: inherit;
          stroke: currentColor;
          transition: all 200ms ease;
        }
      </style></svg></div><style>
          .select {
            display: inline-flex;
            align-items: center;
            user-select: none;
            white-space: nowrap;
            position: relative;
            cursor: pointer;
            max-width: 80vw;
            width: initial;
            overflow: hidden;
            transition: border 0.2s ease 0s, color 0.2s ease-out 0s, box-shadow 0.2s ease 0s;
            border: 1px solid #dbdde0;
            border-radius: 4px;
            padding: 0 calc(8pt * 9 / 8) 0 calc(8pt * 1.5);
            height: calc(1.969 * 16pt);
            min-width: 10rem;
            background-color: transparent;
          }

          .multiple {
            height: auto;
            min-height: calc(1.969 * 16pt);
            padding: 4pt calc(1rem * 2)
              4pt 8pt;
          }

          .select:hover {
            border-color: #0054fe;
          }

          .select:hover .icon,
          .select:hover .value {
            color: #0054fe;
          }

          .value {
            display: inline-flex;
            flex: 1;
            height: 100%;
            align-items: center;
            line-height: 1;
            padding: 0;
            margin-right: 1.25rem;
            font-size: 1rem;
            color: #444;
            width: calc(100% - 1.25rem);
          }

          .value :global(svg) {
            display: none;
          }
          .value :global(.option) {
            border: 1px solid transparent;
          }

          .value > :global(div),
          .value > :global(div:hover) {
            border-radius: 0;
            background-color: transparent;
            padding: 0;
            margin: 0;
            color: inherit;
          }

          .placeholder {
            color: #9b9eac;
          }

          .icon {
            position: absolute;
            right: calc(8pt * 9 / 8);
            font-size: 1rem;
            top: 50%;
            bottom: 0;
            transform: translateY(-50%) rotate(0deg);
            pointer-events: none;
            transition: transform 200ms ease;
            display: flex;
            align-items: center;
            color: #444;
          }
        </style></div><div class=\\"select  \\"><span class=\\"value placeholder\\"><span><style>
        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          line-height: calc(1 * 16pt);
          min-width: 0;
        }
      </style></span></span><div class=\\"icon\\"><svg viewBox=\\"0 0 24 24\\" width=\\"1.25em\\" height=\\"1.25em\\" stroke-width=\\"1\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" fill=\\"none\\" shape-rendering=\\"geometricPrecision\\"><path d=\\"M6 9l6 6 6-6\\"></path><style>
        svg {
          color: inherit;
          stroke: currentColor;
          transition: all 200ms ease;
        }
      </style></svg></div><style>
          .select {
            display: inline-flex;
            align-items: center;
            user-select: none;
            white-space: nowrap;
            position: relative;
            cursor: pointer;
            max-width: 80vw;
            width: initial;
            overflow: hidden;
            transition: border 0.2s ease 0s, color 0.2s ease-out 0s, box-shadow 0.2s ease 0s;
            border: 1px solid #dbdde0;
            border-radius: 4px;
            padding: 0 calc(8pt * 9 / 8) 0 calc(8pt * 1.5);
            height: calc(1 * 16pt);
            min-width: 6.5rem;
            background-color: transparent;
          }

          .multiple {
            height: auto;
            min-height: calc(1 * 16pt);
            padding: 4pt calc(.75rem * 2)
              4pt 8pt;
          }

          .select:hover {
            border-color: #0054fe;
          }

          .select:hover .icon,
          .select:hover .value {
            color: #0054fe;
          }

          .value {
            display: inline-flex;
            flex: 1;
            height: 100%;
            align-items: center;
            line-height: 1;
            padding: 0;
            margin-right: 1.25rem;
            font-size: .75rem;
            color: #444;
            width: calc(100% - 1.25rem);
          }

          .value :global(svg) {
            display: none;
          }
          .value :global(.option) {
            border: 1px solid transparent;
          }

          .value > :global(div),
          .value > :global(div:hover) {
            border-radius: 0;
            background-color: transparent;
            padding: 0;
            margin: 0;
            color: inherit;
          }

          .placeholder {
            color: #9b9eac;
          }

          .icon {
            position: absolute;
            right: calc(8pt * 9 / 8);
            font-size: .75rem;
            top: 50%;
            bottom: 0;
            transform: translateY(-50%) rotate(0deg);
            pointer-events: none;
            transition: transform 200ms ease;
            display: flex;
            align-items: center;
            color: #444;
          }
        </style></div><div class=\\"select  \\"><span class=\\"value placeholder\\"><span><style>
        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          line-height: calc(1.344 * 16pt);
          min-width: 0;
        }
      </style></span></span><div class=\\"icon\\"><svg viewBox=\\"0 0 24 24\\" width=\\"1.25em\\" height=\\"1.25em\\" stroke-width=\\"1\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" fill=\\"none\\" shape-rendering=\\"geometricPrecision\\"><path d=\\"M6 9l6 6 6-6\\"></path><style>
        svg {
          color: inherit;
          stroke: currentColor;
          transition: all 200ms ease;
        }
      </style></svg></div><style>
          .select {
            display: inline-flex;
            align-items: center;
            user-select: none;
            white-space: nowrap;
            position: relative;
            cursor: pointer;
            max-width: 80vw;
            width: initial;
            overflow: hidden;
            transition: border 0.2s ease 0s, color 0.2s ease-out 0s, box-shadow 0.2s ease 0s;
            border: 1px solid #dbdde0;
            border-radius: 4px;
            padding: 0 calc(8pt * 9 / 8) 0 calc(8pt * 1.5);
            height: calc(1.344 * 16pt);
            min-width: 8rem;
            background-color: transparent;
          }

          .multiple {
            height: auto;
            min-height: calc(1.344 * 16pt);
            padding: 4pt calc(.75rem * 2)
              4pt 8pt;
          }

          .select:hover {
            border-color: #0054fe;
          }

          .select:hover .icon,
          .select:hover .value {
            color: #0054fe;
          }

          .value {
            display: inline-flex;
            flex: 1;
            height: 100%;
            align-items: center;
            line-height: 1;
            padding: 0;
            margin-right: 1.25rem;
            font-size: .75rem;
            color: #444;
            width: calc(100% - 1.25rem);
          }

          .value :global(svg) {
            display: none;
          }
          .value :global(.option) {
            border: 1px solid transparent;
          }

          .value > :global(div),
          .value > :global(div:hover) {
            border-radius: 0;
            background-color: transparent;
            padding: 0;
            margin: 0;
            color: inherit;
          }

          .placeholder {
            color: #9b9eac;
          }

          .icon {
            position: absolute;
            right: calc(8pt * 9 / 8);
            font-size: .75rem;
            top: 50%;
            bottom: 0;
            transform: translateY(-50%) rotate(0deg);
            pointer-events: none;
            transition: transform 200ms ease;
            display: flex;
            align-items: center;
            color: #444;
          }
        </style></div><div class=\\"select  \\"><span class=\\"value placeholder\\"><span><style>
        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          line-height: calc(2 * 16pt);
          min-width: 0;
        }
      </style></span></span><div class=\\"icon\\"><svg viewBox=\\"0 0 24 24\\" width=\\"1.25em\\" height=\\"1.25em\\" stroke-width=\\"1\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" fill=\\"none\\" shape-rendering=\\"geometricPrecision\\"><path d=\\"M6 9l6 6 6-6\\"></path><style>
        svg {
          color: inherit;
          stroke: currentColor;
          transition: all 200ms ease;
        }
      </style></svg></div><style>
          .select {
            display: inline-flex;
            align-items: center;
            user-select: none;
            white-space: nowrap;
            position: relative;
            cursor: pointer;
            max-width: 80vw;
            width: initial;
            overflow: hidden;
            transition: border 0.2s ease 0s, color 0.2s ease-out 0s, box-shadow 0.2s ease 0s;
            border: 1px solid #dbdde0;
            border-radius: 4px;
            padding: 0 calc(8pt * 9 / 8) 0 calc(8pt * 1.5);
            height: calc(2 * 16pt);
            min-width: 12.5rem;
            background-color: transparent;
          }

          .multiple {
            height: auto;
            min-height: calc(2 * 16pt);
            padding: 4pt calc(1.225rem * 2)
              4pt 8pt;
          }

          .select:hover {
            border-color: #0054fe;
          }

          .select:hover .icon,
          .select:hover .value {
            color: #0054fe;
          }

          .value {
            display: inline-flex;
            flex: 1;
            height: 100%;
            align-items: center;
            line-height: 1;
            padding: 0;
            margin-right: 1.25rem;
            font-size: 1.225rem;
            color: #444;
            width: calc(100% - 1.25rem);
          }

          .value :global(svg) {
            display: none;
          }
          .value :global(.option) {
            border: 1px solid transparent;
          }

          .value > :global(div),
          .value > :global(div:hover) {
            border-radius: 0;
            background-color: transparent;
            padding: 0;
            margin: 0;
            color: inherit;
          }

          .placeholder {
            color: #9b9eac;
          }

          .icon {
            position: absolute;
            right: calc(8pt * 9 / 8);
            font-size: 1.225rem;
            top: 50%;
            bottom: 0;
            transform: translateY(-50%) rotate(0deg);
            pointer-events: none;
            transition: transform 200ms ease;
            display: flex;
            align-items: center;
            color: #444;
          }
        </style></div></div>"
`;

exports[`Select should render correctly when variant=text 1`] = `
"<div><div class=\\"select  \\"><span class=\\"value\\"><div class=\\"option   \\"><span>Option 2<style>
        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          line-height: calc(1.688 * 16pt);
          min-width: 0;
        }
      </style></span><svg viewBox=\\"0 0 24 24\\" width=\\"18\\" height=\\"18\\" stroke=\\"currentColor\\" stroke-width=\\"1.5\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" fill=\\"none\\" shape-rendering=\\"geometricPrecision\\" style=\\"color: currentColor;\\"><path d=\\"M20 6L9 17l-5-5\\"></path></svg></div><style>
        .option {
          display: flex;
          max-width: 100%;
          justify-content: space-between;
          align-items: center;
          font-weight: normal;
          font-size: 0.75rem;
          height: calc(1.875 * 16pt);
          box-sizing: border-box;
          padding: 0 calc(1.5 * 8pt);
          background-color: #fdfdfe;
          color: #0054fe;
          user-select: none;
          border: 1px solid #0054fe;
          cursor: pointer;
          transition: background 0.2s ease 0s, border-color 0.2s ease 0s;
        }

        .option:hover {
          background-color: #fdfdfe;
          color: #0054fe;
          border: 1px solid #0054fe;
        }

        .divider {
          line-height: 0;
          height: 0;
          padding: 0;
          overflow: hidden;
          border-top: 1px solid #eaeaea;
          margin: 0.5rem 0;
          width: 100%;
        }

        .label {
          font-size: 0.875rem;
          color: #0054fe;
          border-bottom: 1px solid #eaeaea;
          text-transform: capitalize;
          cursor: default;
        }
      </style></span><div class=\\"icon\\"><svg viewBox=\\"0 0 24 24\\" width=\\"1.25em\\" height=\\"1.25em\\" stroke-width=\\"1\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" fill=\\"none\\" shape-rendering=\\"geometricPrecision\\"><path d=\\"M6 9l6 6 6-6\\"></path><style>
        svg {
          color: inherit;
          stroke: currentColor;
          transition: all 200ms ease;
        }
      </style></svg></div><style>
          .select {
            display: inline-flex;
            align-items: center;
            user-select: none;
            white-space: nowrap;
            position: relative;
            cursor: pointer;
            max-width: 80vw;
            width: initial;
            overflow: hidden;
            transition: border 0.2s ease 0s, color 0.2s ease-out 0s, box-shadow 0.2s ease 0s;
            border: 1px solid parent;
            border-radius: 4px;
            padding: 0 calc(8pt * 9 / 8) 0 calc(8pt * 1.5);
            height: calc(1.969 * 16pt);
            min-width: 10rem;
            background-color: transparent;
          }

          .multiple {
            height: auto;
            min-height: calc(1.969 * 16pt);
            padding: 4pt calc(1rem * 2)
              4pt 8pt;
          }

          .select:hover {
            border-color: #0054fe;
          }

          .select:hover .icon,
          .select:hover .value {
            color: #0054fe;
          }

          .value {
            display: inline-flex;
            flex: 1;
            height: 100%;
            align-items: center;
            line-height: 1;
            padding: 0;
            margin-right: 1.25rem;
            font-size: 1rem;
            color: #444;
            width: calc(100% - 1.25rem);
          }

          .value :global(svg) {
            display: none;
          }
          .value :global(.option) {
            border: 1px solid transparent;
          }

          .value > :global(div),
          .value > :global(div:hover) {
            border-radius: 0;
            background-color: transparent;
            padding: 0;
            margin: 0;
            color: inherit;
          }

          .placeholder {
            color: #9b9eac;
          }

          .icon {
            position: absolute;
            right: calc(8pt * 9 / 8);
            font-size: 1rem;
            top: 50%;
            bottom: 0;
            transform: translateY(-50%) rotate(0deg);
            pointer-events: none;
            transition: transform 200ms ease;
            display: flex;
            align-items: center;
            color: #444;
          }
        </style></div>,</div>"
`;

exports[`Select should render right border with variant=text when hover 1`] = `
"<div class=\\"option   \\"><span>Option 1<style>
        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          line-height: calc(1.688 * 16pt);
          min-width: 0;
        }
      </style></span></div>"
`;

exports[`Select should work correctly with labels 1`] = `
"<div class=\\"select  \\"><span class=\\"value placeholder\\"><span><style>
        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          line-height: calc(1.969 * 16pt);
          min-width: 0;
        }
      </style></span></span><div class=\\"icon\\"><svg viewBox=\\"0 0 24 24\\" width=\\"1.25em\\" height=\\"1.25em\\" stroke-width=\\"1\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" fill=\\"none\\" shape-rendering=\\"geometricPrecision\\"><path d=\\"M6 9l6 6 6-6\\"></path><style>
        svg {
          color: inherit;
          stroke: currentColor;
          transition: all 200ms ease;
        }
      </style></svg></div><style>
          .select {
            display: inline-flex;
            align-items: center;
            user-select: none;
            white-space: nowrap;
            position: relative;
            cursor: pointer;
            max-width: 80vw;
            width: initial;
            overflow: hidden;
            transition: border 0.2s ease 0s, color 0.2s ease-out 0s, box-shadow 0.2s ease 0s;
            border: 1px solid #dbdde0;
            border-radius: 4px;
            padding: 0 calc(8pt * 9 / 8) 0 calc(8pt * 1.5);
            height: calc(1.969 * 16pt);
            min-width: 10rem;
            background-color: transparent;
          }

          .multiple {
            height: auto;
            min-height: calc(1.969 * 16pt);
            padding: 4pt calc(1rem * 2)
              4pt 8pt;
          }

          .select:hover {
            border-color: #0054fe;
          }

          .select:hover .icon,
          .select:hover .value {
            color: #0054fe;
          }

          .value {
            display: inline-flex;
            flex: 1;
            height: 100%;
            align-items: center;
            line-height: 1;
            padding: 0;
            margin-right: 1.25rem;
            font-size: 1rem;
            color: #444;
            width: calc(100% - 1.25rem);
          }

          .value :global(svg) {
            display: none;
          }
          .value :global(.option) {
            border: 1px solid transparent;
          }

          .value > :global(div),
          .value > :global(div:hover) {
            border-radius: 0;
            background-color: transparent;
            padding: 0;
            margin: 0;
            color: inherit;
          }

          .placeholder {
            color: #9b9eac;
          }

          .icon {
            position: absolute;
            right: calc(8pt * 9 / 8);
            font-size: 1rem;
            top: 50%;
            bottom: 0;
            transform: translateY(-50%) rotate(0deg);
            pointer-events: none;
            transition: transform 200ms ease;
            display: flex;
            align-items: center;
            color: #444;
          }
        </style></div>"
`;

exports[`Select should work with different icons 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "select  ",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "value placeholder",
        },
        "children": Array [
          Object {
            "attribs": Object {},
            "children": Array [
              Object {
                "attribs": Object {},
                "children": Array [
                  Object {
                    "data": "
        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          line-height: calc(1.969 * 16pt);
          min-width: 0;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
            ],
            "name": "span",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {},
            "x-attribsPrefix": Object {},
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {},
          "children": Array [
            Object {
              "data": "
          .select {
            display: inline-flex;
            align-items: center;
            user-select: none;
            white-space: nowrap;
            position: relative;
            cursor: pointer;
            max-width: 80vw;
            width: initial;
            overflow: hidden;
            transition: border 0.2s ease 0s, color 0.2s ease-out 0s, box-shadow 0.2s ease 0s;
            border: 1px solid #dbdde0;
            border-radius: 4px;
            padding: 0 calc(8pt * 9 / 8) 0 calc(8pt * 1.5);
            height: calc(1.969 * 16pt);
            min-width: 10rem;
            background-color: transparent;
          }

          .multiple {
            height: auto;
            min-height: calc(1.969 * 16pt);
            padding: 4pt calc(1rem * 2)
              4pt 8pt;
          }

          .select:hover {
            border-color: #0054fe;
          }

          .select:hover .icon,
          .select:hover .value {
            color: #0054fe;
          }

          .value {
            display: inline-flex;
            flex: 1;
            height: 100%;
            align-items: center;
            line-height: 1;
            padding: 0;
            margin-right: 1.25rem;
            font-size: 1rem;
            color: #444;
            width: calc(100% - 1.25rem);
          }

          .value :global(svg) {
            display: none;
          }
          .value :global(.option) {
            border: 1px solid transparent;
          }

          .value &gt; :global(div),
          .value &gt; :global(div:hover) {
            border-radius: 0;
            background-color: transparent;
            padding: 0;
            margin: 0;
            color: inherit;
          }

          .placeholder {
            color: #9b9eac;
          }

          .icon {
            position: absolute;
            right: calc(8pt * 9 / 8);
            font-size: 1rem;
            top: 50%;
            bottom: 0;
            transform: translateY(-50%) rotate(0deg);
            pointer-events: none;
            transition: transform 200ms ease;
            display: flex;
            align-items: center;
            color: #444;
          }
        ",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "style",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "style",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
      Object {
        "attribs": Object {},
        "children": Array [
          Object {
            "data": "
          .select {
            display: inline-flex;
            align-items: center;
            user-select: none;
            white-space: nowrap;
            position: relative;
            cursor: pointer;
            max-width: 80vw;
            width: initial;
            overflow: hidden;
            transition: border 0.2s ease 0s, color 0.2s ease-out 0s, box-shadow 0.2s ease 0s;
            border: 1px solid #dbdde0;
            border-radius: 4px;
            padding: 0 calc(8pt * 9 / 8) 0 calc(8pt * 1.5);
            height: calc(1.969 * 16pt);
            min-width: 10rem;
            background-color: transparent;
          }

          .multiple {
            height: auto;
            min-height: calc(1.969 * 16pt);
            padding: 4pt calc(1rem * 2)
              4pt 8pt;
          }

          .select:hover {
            border-color: #0054fe;
          }

          .select:hover .icon,
          .select:hover .value {
            color: #0054fe;
          }

          .value {
            display: inline-flex;
            flex: 1;
            height: 100%;
            align-items: center;
            line-height: 1;
            padding: 0;
            margin-right: 1.25rem;
            font-size: 1rem;
            color: #444;
            width: calc(100% - 1.25rem);
          }

          .value :global(svg) {
            display: none;
          }
          .value :global(.option) {
            border: 1px solid transparent;
          }

          .value &gt; :global(div),
          .value &gt; :global(div:hover) {
            border-radius: 0;
            background-color: transparent;
            padding: 0;
            margin: 0;
            color: inherit;
          }

          .placeholder {
            color: #9b9eac;
          }

          .icon {
            position: absolute;
            right: calc(8pt * 9 / 8);
            font-size: 1rem;
            top: 50%;
            bottom: 0;
            transform: translateY(-50%) rotate(0deg);
            pointer-events: none;
            transition: transform 200ms ease;
            display: flex;
            align-items: center;
            color: #444;
          }
        ",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "style",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "value placeholder",
          },
          "children": Array [
            Object {
              "attribs": Object {},
              "children": Array [
                Object {
                  "attribs": Object {},
                  "children": Array [
                    Object {
                      "data": "
        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          line-height: calc(1.969 * 16pt);
          min-width: 0;
        }
      ",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "text",
                    },
                  ],
                  "name": "style",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "style",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
              ],
              "name": "span",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "type": "style",
        "x-attribsNamespace": Object {},
        "x-attribsPrefix": Object {},
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`Select should work with different icons 2`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "select  ",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "value placeholder",
        },
        "children": Array [
          Object {
            "attribs": Object {},
            "children": Array [
              Object {
                "attribs": Object {},
                "children": Array [
                  Object {
                    "data": "
        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          line-height: calc(1.969 * 16pt);
          min-width: 0;
        }
      ",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "text",
                  },
                ],
                "name": "style",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "style",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
            ],
            "name": "span",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {},
            "x-attribsPrefix": Object {},
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "icon",
          },
          "children": Array [
            Object {
              "attribs": Object {},
              "children": Array [
                Object {
                  "data": "icon",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "span",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": Object {
            "attribs": Object {},
            "children": Array [
              Object {
                "data": "
          .select {
            display: inline-flex;
            align-items: center;
            user-select: none;
            white-space: nowrap;
            position: relative;
            cursor: pointer;
            max-width: 80vw;
            width: initial;
            overflow: hidden;
            transition: border 0.2s ease 0s, color 0.2s ease-out 0s, box-shadow 0.2s ease 0s;
            border: 1px solid #dbdde0;
            border-radius: 4px;
            padding: 0 calc(8pt * 9 / 8) 0 calc(8pt * 1.5);
            height: calc(1.969 * 16pt);
            min-width: 10rem;
            background-color: transparent;
          }

          .multiple {
            height: auto;
            min-height: calc(1.969 * 16pt);
            padding: 4pt calc(1rem * 2)
              4pt 8pt;
          }

          .select:hover {
            border-color: #0054fe;
          }

          .select:hover .icon,
          .select:hover .value {
            color: #0054fe;
          }

          .value {
            display: inline-flex;
            flex: 1;
            height: 100%;
            align-items: center;
            line-height: 1;
            padding: 0;
            margin-right: 1.25rem;
            font-size: 1rem;
            color: #444;
            width: calc(100% - 1.25rem);
          }

          .value :global(svg) {
            display: none;
          }
          .value :global(.option) {
            border: 1px solid transparent;
          }

          .value &gt; :global(div),
          .value &gt; :global(div:hover) {
            border-radius: 0;
            background-color: transparent;
            padding: 0;
            margin: 0;
            color: inherit;
          }

          .placeholder {
            color: #9b9eac;
          }

          .icon {
            position: absolute;
            right: calc(8pt * 9 / 8);
            font-size: 1rem;
            top: 50%;
            bottom: 0;
            transform: translateY(-50%) rotate(0deg);
            pointer-events: none;
            transition: transform 200ms ease;
            display: flex;
            align-items: center;
            color: #444;
          }
        ",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "style",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": [Circular],
            "type": "style",
            "x-attribsNamespace": Object {},
            "x-attribsPrefix": Object {},
          },
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "icon",
        },
        "children": Array [
          Object {
            "attribs": Object {},
            "children": Array [
              Object {
                "data": "icon",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "span",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {},
            "x-attribsPrefix": Object {},
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {},
          "children": Array [
            Object {
              "data": "
          .select {
            display: inline-flex;
            align-items: center;
            user-select: none;
            white-space: nowrap;
            position: relative;
            cursor: pointer;
            max-width: 80vw;
            width: initial;
            overflow: hidden;
            transition: border 0.2s ease 0s, color 0.2s ease-out 0s, box-shadow 0.2s ease 0s;
            border: 1px solid #dbdde0;
            border-radius: 4px;
            padding: 0 calc(8pt * 9 / 8) 0 calc(8pt * 1.5);
            height: calc(1.969 * 16pt);
            min-width: 10rem;
            background-color: transparent;
          }

          .multiple {
            height: auto;
            min-height: calc(1.969 * 16pt);
            padding: 4pt calc(1rem * 2)
              4pt 8pt;
          }

          .select:hover {
            border-color: #0054fe;
          }

          .select:hover .icon,
          .select:hover .value {
            color: #0054fe;
          }

          .value {
            display: inline-flex;
            flex: 1;
            height: 100%;
            align-items: center;
            line-height: 1;
            padding: 0;
            margin-right: 1.25rem;
            font-size: 1rem;
            color: #444;
            width: calc(100% - 1.25rem);
          }

          .value :global(svg) {
            display: none;
          }
          .value :global(.option) {
            border: 1px solid transparent;
          }

          .value &gt; :global(div),
          .value &gt; :global(div:hover) {
            border-radius: 0;
            background-color: transparent;
            padding: 0;
            margin: 0;
            color: inherit;
          }

          .placeholder {
            color: #9b9eac;
          }

          .icon {
            position: absolute;
            right: calc(8pt * 9 / 8);
            font-size: 1rem;
            top: 50%;
            bottom: 0;
            transform: translateY(-50%) rotate(0deg);
            pointer-events: none;
            transition: transform 200ms ease;
            display: flex;
            align-items: center;
            color: #444;
          }
        ",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "style",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "style",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "value placeholder",
          },
          "children": Array [
            Object {
              "attribs": Object {},
              "children": Array [
                Object {
                  "attribs": Object {},
                  "children": Array [
                    Object {
                      "data": "
        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          line-height: calc(1.969 * 16pt);
          min-width: 0;
        }
      ",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "text",
                    },
                  ],
                  "name": "style",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "style",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
              ],
              "name": "span",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
      Object {
        "attribs": Object {},
        "children": Array [
          Object {
            "data": "
          .select {
            display: inline-flex;
            align-items: center;
            user-select: none;
            white-space: nowrap;
            position: relative;
            cursor: pointer;
            max-width: 80vw;
            width: initial;
            overflow: hidden;
            transition: border 0.2s ease 0s, color 0.2s ease-out 0s, box-shadow 0.2s ease 0s;
            border: 1px solid #dbdde0;
            border-radius: 4px;
            padding: 0 calc(8pt * 9 / 8) 0 calc(8pt * 1.5);
            height: calc(1.969 * 16pt);
            min-width: 10rem;
            background-color: transparent;
          }

          .multiple {
            height: auto;
            min-height: calc(1.969 * 16pt);
            padding: 4pt calc(1rem * 2)
              4pt 8pt;
          }

          .select:hover {
            border-color: #0054fe;
          }

          .select:hover .icon,
          .select:hover .value {
            color: #0054fe;
          }

          .value {
            display: inline-flex;
            flex: 1;
            height: 100%;
            align-items: center;
            line-height: 1;
            padding: 0;
            margin-right: 1.25rem;
            font-size: 1rem;
            color: #444;
            width: calc(100% - 1.25rem);
          }

          .value :global(svg) {
            display: none;
          }
          .value :global(.option) {
            border: 1px solid transparent;
          }

          .value &gt; :global(div),
          .value &gt; :global(div:hover) {
            border-radius: 0;
            background-color: transparent;
            padding: 0;
            margin: 0;
            color: inherit;
          }

          .placeholder {
            color: #9b9eac;
          }

          .icon {
            position: absolute;
            right: calc(8pt * 9 / 8);
            font-size: 1rem;
            top: 50%;
            bottom: 0;
            transform: translateY(-50%) rotate(0deg);
            pointer-events: none;
            transition: transform 200ms ease;
            display: flex;
            align-items: center;
            color: #444;
          }
        ",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "style",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "icon",
          },
          "children": Array [
            Object {
              "attribs": Object {},
              "children": Array [
                Object {
                  "data": "icon",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "span",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {},
              "x-attribsPrefix": Object {},
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": Object {
            "attribs": Object {
              "class": "value placeholder",
            },
            "children": Array [
              Object {
                "attribs": Object {},
                "children": Array [
                  Object {
                    "attribs": Object {},
                    "children": Array [
                      Object {
                        "data": "
        span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          line-height: calc(1.969 * 16pt);
          min-width: 0;
        }
      ",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "text",
                      },
                    ],
                    "name": "style",
                    "namespace": "http://www.w3.org/1999/xhtml",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "style",
                    "x-attribsNamespace": Object {},
                    "x-attribsPrefix": Object {},
                  },
                ],
                "name": "span",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
            ],
            "name": "span",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": [Circular],
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "type": "style",
        "x-attribsNamespace": Object {},
        "x-attribsPrefix": Object {},
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
